# Gemini-3-Pro-Evaluations

./: README.md
Gemini-2.5-Pro/: first.html  fourth.py  second.py
Gemini-2.5-Pro/fifth/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Gemini-2.5-Pro/third/: BasicTerminalEmulator.java
Gemini-3-Pro/: first.html  fourth.py  second.py
Gemini-3-Pro/fifth/: CMakeLists.txt  EditorWindow.cpp  EditorWindow.h  main.cpp
Gemini-3-Pro/third/: JavaTerminal.java
